Insert 'by' before contributors and italicize all.  Remove listing of contributors and have them as an comma separated unordered list.  Float left to fix spacing issue and have items on one line.

--- a/static/css/application.css
+++ b/static/css/application.css
@@ -7337,6 +7337,15 @@ html {
       .quire-cover__hero .contributor {
         font-size: 18pt;
         color: #fff; } }
+  .quire-cover__hero .contributor ul {
+    display: inline;
+    list-style: none; }
+  .quire-cover__hero .contributor .by-line {
+    float: left; }
+  .quire-cover__hero .contributor ul .quire-contributor {
+    float: left; }
+  .quire-cover__hero .contributor ul .quire-contributor + .quire-contributor:before {
+    content: ", "; }
 
 .quire-cover__button {
   background-color: #3273dc;
